--- a/lib-widget/src/main/res/values/styles.xml
+++ b/lib-widget/src/main/res/values/styles.xml
@@ -11,4 +11,14 @@
 		<item name="android:textColor">#666666</item>
 		<item name="android:buttonStyle">?android:attr/borderlessButtonStyle</item>
 	</style>
+	
+	<!-- 初始定义倒计时按钮样式 -->
+	<style name="CountDownButtonStyle" parent="Widget.AppCompat.Button.Borderless">
+		<item name="android:minHeight">0dp</item>
+		<item name="android:minWidth">0dp</item>
+		<item name="android:textStyle">normal</item>
+		<item name="android:background">@null</item>
+		<item name="android:textAllCaps">false</item>
+		<item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless</item>
+	</style>
 </resources>
