--- a/lib-widget/src/main/res/values/attrs.xml
+++ b/lib-widget/src/main/res/values/attrs.xml
@@ -26,4 +26,13 @@
         <attr name="bgColor" format="color" />
         <attr name="shape_type" format="integer" />
     </declare-styleable>
+
+    <declare-styleable name="LetterNavigationView">
+        <attr name="text_color" format="color" />
+        <attr name="text_color_down" format="color" />
+        <attr name="background_color_down" format="color" />
+        <attr name="letter_div_height" format="dimension" />
+        <attr name="text_size" format="dimension" />
+        <attr name="background_angle" format="integer" />
+    </declare-styleable>
 </resources>
